@@ -15,6 +15,9 @@ add_executable(nff2rad nff2rad.c)
 add_executable(obj2rad obj2rad.c trans.c)
 target_link_libraries(obj2rad rtrad)
 
+add_executable(pkgBSDF pkgBSDF.c trans.c)
+target_link_libraries(pkgBSDF rtrad)
+
 add_executable(rad2mgf rad2mgf.c)
 target_link_libraries(rad2mgf rtrad)
 
@@ -36,8 +39,12 @@ target_link_libraries(mgf2inv mgf rtrad)
 
 install(TARGETS 
     ies2rad nff2rad lampcolor tmesh2rad obj2rad mgf2rad
-    rad2mgf mgf2meta mgfilt mgf2inv 3ds2mgf
+    rad2mgf mgf2meta mgfilt mgf2inv pkgBSDF 3ds2mgf
   RUNTIME DESTINATION bin)
 
 INSTALL(FILES source.cal tilt.cal lamp.tab window.cal
-  DESTINATION bin)
+  DESTINATION lib)
+
+if (NOT WIN32)
+  INSTALL(PROGRAMS optics2rad.csh DESTINATION bin RENAME optics2rad)
+endif()
