@@ -6,7 +6,7 @@ target_link_libraries(rhcopy rtrad)
 
 add_executable(rhinfo rhinfo.c holo.c holofile.c)
 target_link_libraries(rhinfo rtrad)
-if(NOT WIN32)
+if(UNIX)
   set(VERSION_FILE "${radiance_BINARY_DIR}/src/hd/Version.c")
   create_version_file("${VERSION_FILE}")
 
@@ -19,6 +19,12 @@ if(NOT WIN32)
     rhpict.c rhpict2.c holo.c holofile.c viewbeams.c ${VERSION_FILE})
   target_link_libraries(rhpict rtrad)
   install(TARGETS rholo rhoptimize rhpict RUNTIME DESTINATION bin) 
+
+
+	add_executable(x11.hdi rhdisp.c rhdisp2.c viewbeams.c rhd_x11.c rhd_qtree.c rhd_qtree2r.c rhd_ctab.c holo.c)
+	target_link_libraries (x11.hdi rtrad ${X11_LIBRARIES})
+	install(TARGETS x11.hdi RUNTIME DESTINATION bin)
 endif()
 
-install(TARGETS genrhgrid rhcopy RUNTIME DESTINATION bin)
+
+install(TARGETS genrhgrid rhcopy rhinfo RUNTIME DESTINATION bin)
